r.watershed: fix manual (#2664)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67920 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.watershed/front/r.watershed.html
+++ b/raster/r.watershed/front/r.watershed.html
@@ -150,7 +150,7 @@ flow.
 The output <b>basin</b> map contains unique label for each watershed
 basin. Each basin will be given a unique positive even integer.  Areas
 along edges may not be large enough to create an exterior watershed
-basin.  0 values indicate that the cell is not part of a complete
+basin.  NULL values indicate that the cell is not part of a complete
 watershed basin in the current geographic region.
 
 <p>
