--- a/temporal/t.vect.export/t.vect.export.html
+++ b/temporal/t.vect.export/t.vect.export.html
@@ -21,6 +21,16 @@ to export only a subset of the space time dataset. Archives exported
 with <em>t.vect.export</em> can be imported with
 <em><a href="t.vect.import.html">t.vect.import</a></em>.
 
+<h2>NOTES</h2>
+The name of output file has to specify the suffix of the archive, the
+following suffix has to be added:
+<ul>
+<li><b>.tar</b> in the case of <b>compress=no</b></li>
+<li><b>.tar.bzip2</b> in the case of <b>compress=bzip2</b></li>
+<li><b>.tar.gzip</b> in the case of <b>compress=gzip</b></li>
+</ul>
+
+
 <h2>EXAMPLE</h2>
 
 In this example, five vector maps are created and
@@ -29,9 +39,9 @@ Each vector map represents random locations
 within the boundary of the state taken at 1 month intervals.
 
 <div class="code"><pre>
-t.vect.export input=shoreline output=shoreline_nc
+t.vect.export input=shoreline output=shoreline_nc.tar.bzip2
 
-tar xvfj shoreline_nc
+tar xvfj shoreline_nc.tar.bzip2
 shoreline_1849_1873.xml
 shoreline_1849_1873.xsd
 shoreline_1925_1946.xml
