r.sim.water: add reference from 2015
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67980 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.sim/r.sim.water/r.sim.water.html
+++ b/raster/r.sim/r.sim.water/r.sim.water.html
@@ -225,6 +225,13 @@ using duality between particles and fields. Proceedings of the Open source GIS -
 GRASS users conference 2002 - Trento, Italy, 11-13 September 2002.
 <a href="http://www.ing.unitn.it/~grass/conferences/GRASS2002/proceedings/proceedings/pdfs/Mitasova_Helena_2.pdf">PDF</a>
 
+<li> Hofierka, J., Knutova, M., 2015,
+Simulating aspects of a flash flood using the Monte Carlo method and
+GRASS GIS: a case study of the Malá Svinka Basin (Slovakia),
+Open Geosciences. Volume 7, Issue 1, ISSN (Online) 2391-5447, DOI:
+<a href="http://dx.doi.org/10.1515/geo-2015-0013">10.1515/geo-2015-0013</a>,
+April 2015
+
 <li> Neteler, M. and Mitasova, H., 2008,
 <a href="http://www.grassbook.org">Open Source GIS: A GRASS GIS Approach. Third Edition.</a>
 The International Series in Engineering and Computer Science: Volume 773. Springer New York Inc, p. 406.
