--- a/vector/v.net.components/v.net.components.html
+++ b/vector/v.net.components/v.net.components.html
@@ -4,22 +4,28 @@
 components in a network.
 
 <h2>NOTES</h2>
-Two nodes, <em>u</em> and <em>v</em> are in the same strongly 
-connected component if there are directed paths from <em>u</em> to 
-<em>v</em> and from <em>v</em> to <em>u</em>. The nodes are in the 
-same weakly connected component if, ignoring orientation of the 
-edges, there is a path between them.
-<br>
-
+Two nodes, <em>u</em> and <em>v</em> are in the same strongly connected 
+component if there are directed paths from <em>u</em> to <em>v</em> and 
+from <em>v</em> to <em>u</em>. The nodes are in the same weakly 
+connected component if, ignoring edge directions, there is a path 
+between them.
+<p>
 The type of components is specified by <b>method</b> parameter. 
-<em>v.net.components</em> creates a table and links it to the given <b>layer</b>.
-This table contains only two integer columns: <em>cat</em> and <em>comp
-</em>. If a point or both endpoints of a line belong to the same 
-component then the point/line is written to the output map and 
+<em>v.net.components</em> creates a table and links it to layer 1. This 
+table contains only two integer columns: <em>cat</em> and 
+<em>comp</em>. If a point or both endpoints of a line belong to the 
+same component then the point/line is written to the output map and 
 appropriate information is stored in the table. If <b>-a</b> flag is 
-set then new points are added on the nodes without points. These 
-points have category numbers larger than any category used in the 
-input map.
+set then new points are added on the nodes without points. These points 
+have category numbers larger than any category used in the input map.
+<p>
+One-way roads can be defined by assigning a cost of -1 to the 
+appropriate cost column (<b>arc_column</b> or 
+<b>arc_backward_column</b>. This affects only strongly connected 
+components. Network nodes can be closed by assigning a cost of -1 to 
+the node cost column. All nodes with a cost &lt; 0 can not be traversed 
+and are end points, while all nodes with a cost &ge; 0 can be traversed. 
+This affects both weakly and strongly connected components.
 
 <h2>EXAMPLES</h2>
 
@@ -39,6 +45,7 @@ v.net.components input=roads output=roads_components method=strong
 <h2>AUTHORS</h2>
 
 Daniel Bundala, Google Summer of Code 2009, Student<br>
-Wolf Bergenheim, Mentor
+Wolf Bergenheim, Mentor<br>
+Markus Metz
 
 <p><i>Last changed: $Date$</i>
