--- a/vector/v.net.steiner/v.net.steiner.html
+++ b/vector/v.net.steiner/v.net.steiner.html
@@ -23,9 +23,9 @@ input vector map needs to be prepared with <em>v.net operation=connect</em>.
 
 <h2>NOTES</h2>
 
-<p>Current implementation of obtaining Steiner tree is not memory efficient.
+Current implementation of obtaining Steiner tree is not memory efficient.
 An attempt to run module on a network with large number of intersections thus
-might result in failure to allocate memory or out of memory condition.</p>
+might result in failure to allocate memory or out of memory condition.
 
 <h2>EXAMPLE</h2>
 
