various spelling errors fixed
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68015 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.fft/i.fft.html
+++ b/imagery/i.fft/i.fft.html
@@ -36,7 +36,7 @@ d.rast lsat7_2002_70.real
 d.rast lsat7_2002_70.imag
 </pre></div>
 
-<h2>REFERNCES</h2>
+<h2>REFERENCES</h2>
 
 <ul>
 <li> M. Frigo and S. G. Johnson (1998): "FFTW: An Adaptive Software Architecture
