--- a/raster/r.category/r.category.html
+++ b/raster/r.category/r.category.html
@@ -90,7 +90,7 @@ string for category "num":
 <p>
 <tt>sprintf(buff,"Elevation: %.2f to %.2f feet", num*5.0+1000, num*5.0*1005)</tt>
 
-<p>Note: while both the format and coefficent lines must be present
+<p>Note: while both the format and coefficient lines must be present
       a blank line for the format string will effectively suppress
       automatic label generation.
 <!--
