--- a/raster/r.resamp.bspline/r.resamp.bspline.html
+++ b/raster/r.resamp.bspline/r.resamp.bspline.html
@@ -107,7 +107,7 @@ d.histogram elev_srtm_30m_complete
 d.rast elev_srtm_30m_complete
 </pre></div>
 
-<h3>Estimation of <b>lambda</b> parameter with a cross validation proccess</h3>
+<h3>Estimation of <b>lambda</b> parameter with a cross validation process</h3>
 
 A random sample of points should be generated first with
 <em><a href="r.random.html">r.random</a></em>, and the current region should not
