--- a/raster/r.what/r.what.html
+++ b/raster/r.what/r.what.html
@@ -42,7 +42,7 @@ r.what map=landuse96_28m,aspect coordinates=633614.08,224125.12,632972.36,225382
 
 <h3>Input coordinates given as a vector points map</h3>
 
-Coordinates can be read from exising vector points map by
+Coordinates can be read from existing vector points map by
 specifying <b>points</b> option. Other features than points or
 centroids are ignored. Example: query North Carolina county number for
 each community college:
@@ -59,7 +59,7 @@ r.what map=boundary_county_500m points=comm_colleges
 
 <h3>Input coordinates given as a vector points map, output into CSV file</h3>
 
-Coordinates can be read from exising vector points map by
+Coordinates can be read from existing vector points map by
 specifying <b>points</b> option. Other features than points or
 centroids are ignored. The output is stored in a CSV file including header
 row. Example: query North Carolina county number for each community college:
