--- a/vector/v.build/v.build.html
+++ b/vector/v.build/v.build.html
@@ -47,7 +47,7 @@ includes:
 <h3>Build topology</h3>
 
 Note that <b>option=build</b> recreates also spatial and category
-indeces, not only topology. For linked OGR layers
+indices, not only topology. For linked OGR layers
 (see <em><a href="v.external.html">v.external</a></em>) also feature
 index is created.
 
