--- a/vector/v.clean/v.clean.html
+++ b/vector/v.clean/v.clean.html
@@ -3,7 +3,7 @@
 <em>v.clean</em> allows the user to automatically fix topology of vector 
 maps. Several tools may be listed to be executed sequentially. In this
 case, also the threshold parameter requires several values to be listed
-accordingly. An error map is optionally written which stores the errorneous
+accordingly. An error map is optionally written which stores the erroneous
 geometries.
 
 <h3>Break lines/boundaries</h3>
