--- a/vector/v.surf.bspline/v.surf.bspline.html
+++ b/vector/v.surf.bspline/v.surf.bspline.html
@@ -109,7 +109,7 @@ A bilinear spline interpolation will be done with a spline step length
 of 25 map units. An interpolated raster map will be created at the
 current region resolution.
 
-<h3>Estimation of lambda_i parameter with a cross validation proccess</h3>
+<h3>Estimation of lambda_i parameter with a cross validation process</h3>
 
 <div class="code"><pre>
 v.surf.bspline -c input=point_vector 
