--- a/vector/v.net.spanningtree/v.net.spanningtree.html
+++ b/vector/v.net.spanningtree/v.net.spanningtree.html
@@ -4,15 +4,16 @@
 network. 
 
 <h2>NOTES</h2>
-A spanning tree is a minimum cost subnetwork connecting all nodes in a 
-network. Or, if a network is disconnected then the module computes 
-the minimum spanning tree for each (weakly) connected component. So, 
-strictly speaking, <em>v.net.spanningtree</em> does not compute spanning tree
-but a spanning forest. As the name suggests, a spanning tree is a tree. That 
-is, it contains no cycles and if a component has N nodes then the 
-tree has N-1 edges connecting all nodes. <b>Accol</b> is used to 
-specify the costs of the edges. The <b>output</b> consists of the 
-edges in the spanning tree.
+A spanning tree is a minimum cost subnetwork connecting all nodes in an 
+undirected network (same forward and backward costs). If a network is 
+disconnected then the module computes the minimum spanning tree for 
+each (weakly) connected component. So, strictly speaking, 
+<em>v.net.spanningtree</em> does not compute spanning tree but a 
+spanning forest. As the name suggests, a spanning tree is a tree. That 
+is, it contains no cycles and if a component has N nodes then the tree 
+has N-1 edges connecting all nodes. <b>Accol</b> is used to specify the 
+costs of the edges. The <b>output</b> consists of the edges in the 
+spanning tree.
 
 <h2>EXAMPLES</h2>
 
