REQUIREMENTS: added python-termcolor
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68033 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/REQUIREMENTS.html
+++ b/REQUIREMENTS.html
@@ -164,6 +164,10 @@ a newer version is "python-pillow"
 <a href="http://matplotlib.org/">http://matplotlib.org/</a>
 </li>
 
+<li><b>python-termcolor</b> (recommended for g.search.modules)<br>
+<a href="https://pypi.python.org/pypi/termcolor">https://pypi.python.org/pypi/termcolor</a>
+</li>
+
 <li><b>FFMPEG or alternative</b> (for wxGUI Animation tool - g.gui.module),
     specifically ffmpeg tool<br>
 <a href="http://ffmpeg.org">http://ffmpeg.org</a>
