g.gui.gmodeler: link sample model in the manual (by Ludka Furtkevicova)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@68041 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/gmodeler/g.gui.gmodeler.html
+++ b/gui/wxpython/gmodeler/g.gui.gmodeler.html
@@ -225,6 +225,10 @@ Final model, list of all model items, Python code window with <i>Save</i> and
 <i>Figure: Items with Python editor window.</i>
 </center>
 
+<p>The resultant model for Graphical Modeler is
+available <a href="g_gui_gmodeler_zipcodes_avg_elevation.gxm
+">here</a>.
+
 <p>
 After model is run with <img src="icons/execute.png" alt="run"> button
 and inputs are set, results can be displayed as follows:
@@ -245,13 +249,6 @@ from
 Slovakia precipitation dataset</a> and administration boudaries of Slovakia from 
 <a href="https://www.geoportal.sk/sk/zbgis_smd/na-stiahnutie/">Slovak Geoportal</a>
 (only with a few clicks).
-
-<p>
-<br>
-<em>
-  <a href="wxGUI.html">wxGUI</a><br>
-  <a href="wxGUI.components.html">wxGUI components</a>
-</em>
 
 <h2>SEE ALSO</h2>
 
